log
Thu 28 Mar 2024 02:11:32 PM UTC: 
 tests:  0|6
total_score: 0/70
113292a
Thu 28 Mar 2024 02:28:32 PM UTC: 
 list.c | 31 ++++++++++++++++++++++++++-----
 1 file changed, 26 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 20/70
282740f
Thu 28 Mar 2024 02:31:09 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 20/70
6e48c18
Thu 28 Mar 2024 02:34:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
064b9b8
Thu 28 Mar 2024 02:38:22 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 30/70
64c99d2
Thu 28 Mar 2024 02:39:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 30/70
ee84181
Thu 28 Mar 2024 02:44:25 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:101:1: error: control reaches end of non-void function [-Werror=return-type]
  101 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d9d3be9
Thu 28 Mar 2024 02:45:16 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
f75fd4a
Thu 28 Mar 2024 02:48:20 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
1cdc3dc
Thu 28 Mar 2024 02:54:13 PM UTC: 
 list.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
 tests:  3|3
total_score: 30/70
92c35a6
Thu 28 Mar 2024 02:55:22 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|2
total_score: 45/70
e2b2dc0
Thu 28 Mar 2024 02:58:40 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
de84aa0
Thu 28 Mar 2024 03:00:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
658ec54
Thu 28 Mar 2024 03:01:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a54688b
